# edc2026-workshop-containerised-integration-testing

./: .gitignore
.github/workflows/: execute_integration_tests_remotely.yml  integration-tests.yml  run_integration_tests_ch6.yml
chapter_1/: README.md
chapter_2/: README.md  main.py  pyproject.toml  requirements.txt
chapter_2/src/tickets_api/: app.py  db.py  models.py  startup_script.py
chapter_2/src/tickets_api_ch2/: models.py
chapter_2/tests/: conftest.py  test_ticket_system.py
chapter_3/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
chapter_3/src/tickets_api_ch3/: app.py  db.py  models.py  startup_script.py
chapter_3/tests/: conftest.py  containers.py  test_ticket_system.py
chapter_4/: README.md
chapter_5/: README.md  pyproject.toml
chapter_5/integration_tests/: conftest.py  test_integration.py
chapter_5/integration_tests/custom_containers/: postgres.py  tickets_api.py
chapter_5/integration_tests_ch5/: conftest.py  test_integration.py
chapter_5/integration_tests_ch5/custom_containers/: postgres.py  tickets_api.py
chapter_5/tickets_api/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
chapter_5/tickets_api/src/tickets_api_ch5/: app.py  startup_script.py
chapter_5/tickets_api/tests/: conftest.py  containers.py  test_ticket_system.py
chapter_6/: README.md  pyproject.toml
chapter_6/integration_tests/: conftest.py
chapter_6/integration_tests/custom_containers/: log_docker_container.py  postgres.py  tickets_api.py
chapter_6/integration_tests_ch6/: conftest.py
chapter_6/integration_tests_ch6/custom_containers/: log_docker_container.py  tickets_api.py
chapter_7/: README.md  pyproject.toml
chapter_7/integration_tests_ch7/: conftest.py  test_integration.py
chapter_7/integration_tests_ch7/custom_containers/: azurite.py  postgres.py  tickets_api.py
chapter_9/: README.md
