[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integration-tests"
version = "1.0.0"
description = "Internal reusable integration test harness"
requires-python = ">=3.13"
dependencies = [
  "pytest",
  "testcontainers[postgres,mqtt]",
  "pydantic",
  "loguru",
  "requests"
]

[project.optional-dependencies]
dev = [
    "black"
]

[tool.setuptools.packages.find]
where = ["integration_tests"]

[tool.pytest.ini_options]
testpaths = ["integration_tests"]
pythonpath = ["."]