[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tickets-api-ch5"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg[binary]",
  "loguru",
  "requests",
  "pydantic",
  "starlette",
  "httpx",
  "testcontainers[postgres]"
]

[project.optional-dependencies]
dev = [
  "black",
  "pip-tools",
  "pytest-mock",
  "pytest",
]

[project.scripts]
start-tickets-api = "tickets_api_ch5.startup_script:start"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]